--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -23,8 +23,7 @@
 			<div class="form-group">
 				<%= f.label :date, 'Date' %>
 				<div class="input-group">
-					<span class="input-group-addon"><%= icon('fas', 'calendar-alt') %></span>
-					<%= f.text_field :date, :required => true, :placeholder => 'YYYY-MM-DD', :class => 'form-control datepicker', :value => @expense.date ? @expense.date : Time.now.strftime("%Y-%m-%d") %>
+					<%= f.date_field :date, :required => true, :placeholder => 'YYYY-MM-DD', :pattern => '\d{4}-\d{2}-\d{2}', :value => @expense.date ? @expense.date : Time.now.strftime("%Y-%m-%d") %>
 				</div>
 			</div>
 		</div>
