--- a/app/views/expenses/bulk_new.html.erb
+++ b/app/views/expenses/bulk_new.html.erb
@@ -1,41 +1,33 @@
 <% provide(:title, 'New Bulk Expenses') %>
 <h1><%= icon('far', 'credit-card', class: 'fa-fw left') %>New Bulk Expenses</h1>
 <p>Assumes all use the '<%= expense_account_types[0] %>' account type and have no notes.</p>
-<div class="bulk-expenses-row-header">
-	<div class="col-sm-3 col-lg-2">
+
+<%= form_tag do |f| %>
+	<div class="panel">
+	<div class="bulk-expenses-row-header">
 		<strong>Date</strong>
-	</div>
-	<div class="col-sm-4">
 		<strong>Vendor</strong>
-	</div>
-	<div class="col-sm-3 col-lg-4">
 		<strong>Name</strong>
-	</div>
-	<div class="col-sm-2">
 		<strong>Cost</strong>
 	</div>
-</div>
-<div class="panel">
-	<%= form_tag do |f| %>
-		<div class="row new-expense-row">
+		<div class="new-expense-row">
 			<div class="col-sm-3 col-lg-2">
 				<div class="form-group">
 					<div class="input-group">
-						<span class="input-group-addon"><%= icon('fas', 'calendar-alt') %></span>
-						<%= text_field_tag('date[]', Time.now.strftime("%Y-%m-%d"), { :required => true, :placeholder => 'YYYY-MM-DD', :class => 'form-control datepicker bulk-datepicker-input'}) %>
+						<%= date_field_tag('date[]', Time.now.strftime("%Y-%m-%d"), { :required => true, :placeholder => 'YYYY-MM-DD', :pattern => '\d{4}-\d{2}-\d{2}' }) %>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<%= select_tag('vendor_id[]', options_from_collection_for_select(Vendor.all, 'id', 'name'), { :required => true, :class => 'form-control' }) %>
+				<%= select_tag('vendor_id[]', options_from_collection_for_select(Vendor.all, 'id', 'name'), { :required => true }) %>
 			</div>
 			<div class="col-sm-3 col-lg-4">
-				<%= text_field_tag('name[]', nil, { :required => true, :class => 'form-control' }) %>
+				<%= text_field_tag('name[]', nil, { :required => true }) %>
 			</div>
 			<div class="col-sm-2">
 				<div class="input-group">
 					<span class="input-group-addon"><%= icon('fas', 'dollar-sign') %></span>
-					<%= number_field_tag('cost[]', nil, { :required => true, :placeholder => '0.00', :class => 'form-control', :step => '0.01' }) %>
+					<%= number_field_tag('cost[]', nil, { :required => true, :placeholder => '0.00', :step => '0.01' }) %>
 				</div>
 			</div>
 		</div>
@@ -45,7 +37,8 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<button type="submit" class="btn btn-success"><%= icon('far', 'save', class: 'left') %>Save</button>
+
 		</div>
+		<button type="submit" class="btn btn-success"><%= icon('far', 'save', class: 'left') %>Save</button>
 	<% end %>
 </div>
