--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -12,7 +12,7 @@
 				<th>Client</th>
 				<th>Date</th>
 				<th>&nbsp;</th>
-				<th class="text-right hidden-xs">Cost</th>
+				<th class="text-right">Cost</th>
 				<th class="text-center">Paid?</th>
 			</tr>
 		</thead>
@@ -22,12 +22,12 @@
 				<td><%= link_to Client.find(invoice.client_id) do %><%= Client.find(invoice.client_id).name %><% end %></td>
 				<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
 				<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><%= icon('far', 'copy') %><% end %><% if !invoice.paid? %><%= link_to mark_paid_invoice_path(invoice), title: 'Paid Today?', class: 'paid-today-btn paid-today-link', remote: true do %><%= icon('fas', 'check-square', class: 'right') %><% end %><% end %></td>
-				<td class="currency text-right hidden-xs"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
+				<td class="currency text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
 				<td class="text-center"><% if invoice.paid == true %><%= icon('fas', 'check', class: 'green') %><% else %><span class="spread red">Not Paid</span><% end %></td>
 			</tr>
 			<% end %>
 		</tbody>
 	</table>
 	<% end %>
-	<%= render 'layouts/financialdash' %>
+	<%= render 'layouts/financial-dash' %>
 </div>
