--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Dashboard') %>
 <h1><%= icon('fas', 'home', class: 'fa-fw left') %>Dashboard</h1>
 <div class="panel">
-	<%= render 'layouts/financialdash' %>
+	<%= render 'layouts/financial-dash' %>
 </div>
