--- a/app/assets/stylesheets/partials/_content.scss
+++ b/app/assets/stylesheets/partials/_content.scss
@@ -4,6 +4,16 @@ section {
 	background: $grey-light;
 }
 
+.panel,
+.table,
+section > p {
+
+	a {
+		color: $color-primary;
+	}
+
+}
+
 table {
 
 	width: 100%;
@@ -24,6 +34,10 @@ table {
 
 		tr {
 
+			&:hover td {
+				background: $grey-light;
+			}
+
 			&:first-child {
 
 				td {
@@ -36,4 +50,12 @@ table {
 
 	}
 
+}
+
+.copy-invoice-link {
+	color: $orange;
+}
+
+.paid-today-link {
+	color: $green;
 }
