--- a/app/assets/stylesheets/partials/_variables.scss
+++ b/app/assets/stylesheets/partials/_variables.scss
@@ -7,6 +7,7 @@ $grey-dark: #707070;
 $red: #f74f4f;
 $green: #29b165;
 $blue: #4492ff;
+$orange: #ffba83;
 
 $color-primary: $blue;
 $border-color: $grey;
