--- a/app/views/expenses/bulk_new.html.erb
+++ b/app/views/expenses/bulk_new.html.erb
@@ -33,7 +33,7 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<button id="duplicate-expense-row" class="duplicate-expenses-row btn btn-primary pull-right">Duplicate</button>
+				<button id="duplicate-expense-row" class="duplicate-expenses-row btn btn-primary">Duplicate</button>
 			</div>
 		</div>
 		<div class="form-group">
