--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -15,7 +15,7 @@
 			<tr>
 				<th>Date</th>
 				<th>Vendor</th>
-				<th class="hidden-xs">Name</th>
+				<th>Name</th>
 				<th class="text-right">Cost</th>
 			</tr>
 		</thead>
@@ -24,7 +24,7 @@
 			<tr>
 				<td><%= link_to expense do %><%= expense.date %><% end %></td>
 				<td><%= link_to expense.vendor do %><%= expense.vendor.name %><% end %></td>
-				<td class="hidden-xs"><%= expense.name %></td>
+				<td><%= expense.name %></td>
 				<td class="currency text-right"><%= number_to_currency(expense.cost, { :negative_format => '(%n)' }) %></td>
 			</tr>
 			<% end %>
