--- a/app/views/years/_tab-goals.html.erb
+++ b/app/views/years/_tab-goals.html.erb
@@ -2,26 +2,26 @@
 	<thead>
 		<tr>
 			<th>&nbsp;</th>
-			<th>Goal</th>
-			<th>Actual</th>
+			<th class="text-right">Goal</th>
+			<th class="text-right">Actual</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr>
 			<td><strong>Year</strong></td>
-			<td><span class="currency"><%= number_to_currency(@year.goal_year, { :precision => 0 }) %></span></td>
-			<td><span class="currency"><%= number_to_currency(@year.incomeTotal, { :negative_format => '(%n)' }) %></span></td>
+			<td class="currency text-right"><%= number_to_currency(@year.goal_year, { :precision => 0 }) %></td>
+			<td class="currency text-right"><%= number_to_currency(@year.incomeTotal, { :negative_format => '(%n)' }) %></td>
 		</tr>
 		<% @year.goals_months.each_with_index do |month, index| %>
 		<tr>
 			<td><strong><%= Date::MONTHNAMES[index + 1] %></strong></td>
-			<td><span class="currency"><%= number_to_currency(month.to_i, { :precision => 0 }) %></span></td>
-			<td><span class="currency"><%
+			<td class="currency text-right"><%= number_to_currency(month.to_i, { :precision => 0 }) %></td>
+			<td class="currency text-right"><%
 				monthSum = Invoice.paidByMonth(@year.year, index + 1).sum('cost')
 				if monthSum == 0
 			%>&mdash;<% else %>
 			<%= number_to_currency(monthSum, { :negative_format => '(%n)' }) %>
-			<% end %></span></td>
+			<% end %></td>
 		</tr>
 		<% end %>
 	</tbody>
