--- a/app/views/years/index.html.erb
+++ b/app/views/years/index.html.erb
@@ -9,16 +9,16 @@
 		<thead>
 			<tr>
 				<th>Year</th>
-				<th>Expenses</th>
-				<th>Revenue</th>
+				<th class="text-right">Expenses</th>
+				<th class="text-right">Revenue</th>
 			</tr>
 		</thead>
 		<tbody>
 			<% @years.each do |year| %>
 			<tr>
 				<td><%= link_to year do %><%= year.year %><% end %></td>
-				<td><%= number_to_currency(year.expenses.sum(:cost), { :negative_format => '(%n)' }) %></td>
-				<td><%= number_to_currency(year.incomeTotal, { :negative_format => '(%n)' }) %></td>
+				<td class="currency text-right"><%= number_to_currency(year.expenses.sum(:cost), { :negative_format => '(%n)' }) %></td>
+				<td class="currency text-right"><%= number_to_currency(year.incomeTotal, { :negative_format => '(%n)' }) %></td>
 			</tr>
 			<% end %>
 		</tbody>
