--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -10,4 +10,5 @@
 @import 'partials/panels';
 @import 'partials/buttons';
 @import 'partials/forms';
+@import 'partials/charts';
 @import 'partials/login'
