--- a/app/views/welcome/best.html.erb
+++ b/app/views/welcome/best.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Best') %>
-<h1><%= icon('fas', 'medal', class: 'fa-fw left') %>Best</h1>
+<% provide(:title, 'Best Performances') %>
+<h1><%= icon('fas', 'medal', class: 'fa-fw left') %>Best Performances</h1>
 <div class="panel">
 	<h2>Months</h2>
 	<table>
