--- a/app/views/welcome/payment.html.erb
+++ b/app/views/welcome/payment.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, '') %>
+<% provide(:title, 'Payment Options') %>
 <section id="payment" class="payment-summary-page">
 	<div class="container">
 		<div class="row">
