--- a/app/assets/stylesheets/partials/_nav.scss
+++ b/app/assets/stylesheets/partials/_nav.scss
@@ -1,15 +1,20 @@
 nav {
 
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: stretch;
 	flex-basis: $nav-width;
-	padding: 3rem 0px;
-	min-height: calc(var(--vh, 1vh) * 100 - 5.25rem);
-	background: $grey-light;
-	border-right: 1px solid $border-color;
+
+	.nav-inner {
+		position: sticky;
+		top: 84px;
+		display: flex;
+		flex-wrap: wrap;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: stretch;
+		padding: 3rem 0px;
+		min-height: calc(var(--vh, 1vh) * 100 - 5.25rem);
+		background: $grey-light;
+		border-right: 1px solid $border-color;
+	}
 
 	a {
 		color: $black;
