--- a/app/views/invoices/show.pdf.erb
+++ b/app/views/invoices/show.pdf.erb
@@ -46,7 +46,7 @@
 				<p class="indent">Thank you,<br><%= company[:operator_name] %><br><%= company[:full_name] %><br><%= company[:email] %><br><%= company[:phone] %></p>
 				<hr>
 				<% if @invoice.lines.present? %>
-				<table class="table table-condensed">
+				<table>
 		      <thead>
 		        <tr>
 		          <th>Description</th>
