--- a/app/assets/stylesheets/partials/_content.scss
+++ b/app/assets/stylesheets/partials/_content.scss
@@ -26,8 +26,21 @@ table {
 	}
 
 	th {
+
+		position: relative;
+		padding-bottom: 0.625rem;
 		text-align: left;
-		border-bottom: 0.125rem solid $grey-light;
+
+		&:after {
+			content: ' ';
+			position: absolute;
+			bottom: 0px;
+			left: 0px;
+			width: 100%;
+			height: 0.125rem;
+			background: $grey-light;
+		}
+
 	}
 
 	tbody {
@@ -40,9 +53,9 @@ table {
 
 			&:first-child {
 
-				td {
-					padding-top: 0.75rem;
-				}
+				// td {
+				// 	padding-top: 0.75rem;
+				// }
 
 			}
 
