--- a/app/views/invoices/_line-items-table.html.erb
+++ b/app/views/invoices/_line-items-table.html.erb
@@ -1,12 +1,12 @@
 <% if !@invoice.lines.blank? %>
-<table class="table table-hover table-condensed">
+<table>
 	<thead>
 		<tr>
 			<th>&nbsp;</th>
 			<th>Description</th>
 			<th class="text-center">Hours</th>
 			<th class="text-center">Rate ($) per Hour</th>
-			<th class="text-center">Cost</th>
+			<th class="text-right">Cost</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -15,7 +15,7 @@
 	<tfoot>
 		<tr>
 			<td class="text-right" colspan="4"><strong>Total</strong>&nbsp;&nbsp;</td>
-			<td class="currency"><strong><%= number_to_currency(@invoice.lines.sum('total'), { :unit => '', :negative_format => '(%n)' }) %></div>$</strong></td>
+			<td class="currency text-right"><strong><%= number_to_currency(@invoice.lines.sum('total'), { :negative_format => '(%n)' }) %></strong></div></td>
 		</tr>
 	</tfoot>
 </table>
